# sdk-tpl

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  sdk-tpl.config.json
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh  release.sh  scaffold.sh
sdks/dart/: pubspec.yaml
sdks/dart/lib/: sdk_tpl.dart
sdks/dart/lib/src/: client.dart  config.dart
sdks/dart/test/: circuit_breaker_test.dart  security_test.dart
sdks/dotnet/src/: SdkTpl.csproj  SdkTplClient.cs  SdkTplConfig.cs
sdks/dotnet/src/Errors/: ErrorCode.cs  (+2 more)
sdks/dotnet/tests/: CircuitBreakerTests.cs  SdkTpl.Tests.csproj  SecurityTests.cs
sdks/go/: exports.go  go.mod
sdks/go/client/: client.go
sdks/go/config/: options.go
sdks/go/errors/: errors.go
sdks/go/security/: security.go
sdks/go/tests/: circuit_breaker_test.go  retry_test.go  sanitizer_test.go  security_test.go
sdks/go/types/: types.go
sdks/java/: pom.xml
sdks/kotlin/: build.gradle.kts
sdks/php/: composer.json  phpunit.xml
sdks/php/src/: SdkTplClient.php  SdkTplConfig.php
sdks/php/tests/: CircuitBreakerTest.php  SecurityTest.php
sdks/python/: pyproject.toml
sdks/python/src/sdk_tpl/: __init__.py  client.py
sdks/python/src/sdk_tpl/errors/: __init__.py  error_codes.py  sdk_tpl_error.py
sdks/python/src/sdk_tpl/http/: __init__.py  http_client.py  retry.py
sdks/python/src/sdk_tpl/types/: __init__.py  config.py
sdks/python/src/sdk_tpl/utils/: logger.py  platform.py  security.py  version.py
sdks/python/tests/: conftest.py  test_circuit_breaker.py  test_client.py  test_error_sanitizer.py  test_retry.py  test_security.py
sdks/react/: package.json  tsconfig.json
sdks/react/src/: context.ts  index.ts  types.ts
sdks/ruby/: sdk_tpl.gemspec
sdks/ruby/lib/: sdk_tpl.rb
sdks/ruby/spec/: circuit_breaker_spec.rb  security_spec.rb  spec_helper.rb
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  config.rs  lib.rs
sdks/rust/src/errors/: mod.rs  sdk_tpl_error.rs
sdks/rust/src/http/: circuit_breaker.rs  client.rs  retry.rs
sdks/rust/src/utils/: logger.rs  version.rs
sdks/rust/tests/: circuit_breaker_test.rs  security_test.rs
sdks/swift/: Package.swift
sdks/typescript/: package.json
sdks/typescript/src/: client.ts  index.ts
(+83 files in other folders)
