[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "{{SDK_SLUG}}"
version = "{{SDK_VERSION}}"
description = "{{SDK_NAME}} Python SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.10"
authors = [
    { name = "{{ORG_NAME}}" },
]
keywords = ["sdk", "api", "{{SDK_SLUG}}"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/{{GITHUB_ORG}}/{{SDK_SLUG}}"
Repository = "https://github.com/{{GITHUB_ORG}}/{{SDK_SLUG}}"
Issues = "https://github.com/{{GITHUB_ORG}}/{{SDK_SLUG}}/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sdk_tpl = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
